--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -2,5 +2,11 @@
 
   <h1><%-title %></h1>
   <p>Welcome to <%-title %></p>
-
+  <p><%-html %></p>
+  <p><%=htmlstring %></p>
+  <ul>
+    <% for(var i=0;i<supplies.length;i++) {%>
+        <li><%=supplies[i] %></li>
+    <% } %>
+  </ul>  
 <% include footer %>
